--- a/强化学习笔记/12_近端策略优化.ipynb
+++ b/强化学习笔记/12_近端策略优化.ipynb
@@ -77,6 +77,8 @@
     "        self.fc_std = torch.nn.Linear(hidden_dim, action_dim)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # 也可以直接用tanh激活输出一个固定值, 再缩放为所需动作值\n",
+    "        # 输出均值方差的好处是可以创建一个正态分布, 再采采样一次, 还有探索空间\n",
     "        x = F.relu(self.fc1(x))\n",
     "        mu = 2.0 * torch.tanh(self.fc_mu(x))\n",
     "        std = F.softplus(self.fc_std(x))\n",
@@ -221,6 +223,20 @@
     "            critic_loss.backward()\n",
     "            self.actor_optimizer.step()\n",
     "            self.critic_optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ✅PPO裁剪原理 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PPO限制了更新的大小，因此对于同一批数据可以多次训练，这样参数更新会更精确"
    ]
   },
   {
@@ -432,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -530,6 +546,35 @@
    "source": [
     "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)\n",
     "rl_utils.picture_return(return_list, 'PPO', env_name, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1000.9469103590377,\n",
+       " -385.09941986469727,\n",
+       " -1042.9916223346227,\n",
+       " -130.53942858880572,\n",
+       " -3.401886510396139,\n",
+       " -259.49128598665396,\n",
+       " -1.2331297759506024,\n",
+       " -415.9270599356487,\n",
+       " -413.8672071130356,\n",
+       " -2.277555719552864]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rl_utils.show_gym_policy(env_name, agent, 'AC', steps=500)"
    ]
   }
  ],
