修改, 增加笔记

--- a/强化学习笔记/09_策略梯度.ipynb
+++ b/强化学习笔记/09_策略梯度.ipynb
@@ -17,10 +17,9 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm\n",
     "import rl_utils\n",
-    "import os"
+    "import os\n",
+    "from tqdm import tqdm"
    ]
   },
   {
