--- a/强化学习笔记/12_近端策略优化.ipynb
+++ b/强化学习笔记/12_近端策略优化.ipynb
@@ -80,7 +80,7 @@
     "        # 也可以直接用tanh激活输出一个固定值, 再缩放为所需动作值\n",
     "        # 输出均值方差的好处是可以创建一个正态分布, 再采采样一次, 还有探索空间\n",
     "        x = F.relu(self.fc1(x))\n",
-    "        mu = 2.0 * torch.tanh(self.fc_mu(x))\n",
+    "        mu = 2.0 * torch.tanh(self.fc_mu(x))  # 最大动作值是2, 因此乘以2缩放\n",
     "        std = F.softplus(self.fc_std(x))\n",
     "        return mu, std"
    ]
