增加笔记，修改笔记

--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -4,12 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 待办\n",
+    "- [ ] 实现路径衍生梯度策略"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 导入包"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +83,12 @@
    "source": [
     "# A2C算法\n",
     "\n",
-    "优势评论员算法\n",
-    "\n",
-    "## Todo list\n",
-    "- [ ] 实现路径衍生梯度策略"
+    "优势评论员算法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_A2C.pt'\n",
+    "CKP_PATH = 'checkpoints/ckpt_A2C_CPv1.pt'\n",
     "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)"
    ]
   },
