--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -7,7 +7,7 @@
     "# 待办\n",
     "\n",
     "- TODO\n",
-    "    - [ ] 实现双深度确定策略"
+    "    - [ ] 实现双深度确定策略 TD3, 参考 \"/other_files/TD3.ipynb\""
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                                \r"
+      "                                                                                            \r"
      ]
     }
    ],
@@ -327,27 +327,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([-118.455, -130.697, -242.415, -116.781, -128.929,   -3.067,\n",
-       "       -122.867,   -3.892, -125.054,   -2.745])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<1/10>: -126.379\n",
+      "<2/10>: -235.701\n",
+      "<3/10>: -232.317\n",
+      "<4/10>: -4.768\n",
+      "<5/10>: -128.18\n",
+      "<6/10>: -118.883\n",
+      "<7/10>: -3.26\n",
+      "<8/10>: -126.048\n",
+      "<9/10>: -120.496\n",
+      "<10/10>: -328.573\n"
+     ]
     }
    ],
    "source": [
     "rl_utils.show_gym_policy(env_name, agent, 'AC')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
