--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -54,6 +54,7 @@
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.fc1(x))\n",
+    "        # 这里直接缩放并输出, 而非像PPO中输出均值方差再采样\n",
     "        return torch.tanh(self.fc2(x)) * self.action_bound  # 缩放到动作空间\n",
     "\n",
     "\n",
