--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "class PolicyNet(torch.nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_bound):\n",
-    "        super(PolicyNet, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.fc1 = torch.nn.Linear(state_dim, hidden_dim)\n",
     "        self.fc2 = torch.nn.Linear(hidden_dim, action_dim)\n",
     "        self.action_bound = action_bound  # action_bound是环境可以接受的动作最大值\n",
@@ -60,7 +60,7 @@
     "\n",
     "class QValueNet(torch.nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim):\n",
-    "        super(QValueNet, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.fc1 = torch.nn.Linear(state_dim + action_dim, hidden_dim)\n",
     "        self.fc2 = torch.nn.Linear(hidden_dim, hidden_dim)\n",
     "        self.fc_out = torch.nn.Linear(hidden_dim, 1)\n",
@@ -87,7 +87,6 @@
    "source": [
     "class DDPG:\n",
     "    ''' DDPG算法 '''\n",
-    "\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_bound,\n",
     "                 sigma, actor_lr, critic_lr, tau, gamma, device):\n",
     "        self.actor = PolicyNet(state_dim, hidden_dim,\n",
