--- a/强化学习笔记/other_files/TD3.ipynb
+++ b/强化学习笔记/other_files/TD3.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "        self.actor_optimizer = torch.optim.Adam(\n",
     "            self.actor.parameters(), lr=self.actor_lr)\n",
-    "\n",
+    "        # ! 技巧1: 给了两个critic Q函数, 给出较小Q值的会纳入Q_target计算, 自此有六个网络\n",
     "        self.critic_1 = Critic(cfg.n_states, cfg.n_actions,\n",
     "                               hidden_dim=cfg.critic_hidden_dim).to(self.device)\n",
     "        self.critic_2 = Critic(cfg.n_states, cfg.n_actions,\n",
@@ -185,10 +185,10 @@
     "            action = self.actor(state)\n",
     "            action = self.action_scale * action + self.action_bias\n",
     "            action = action.detach().cpu().numpy()[0]\n",
-    "            action_noise = np.random.normal(0, self.action_scale.cpu().numpy()[\n",
-    "                                            0] * self.expl_noise, size=self.n_actions)\n",
-    "            action = (action + action_noise).clip(self.action_space.low,\n",
-    "                                                  self.action_space.high)\n",
+    "            action_noise = np.random.normal(0, self.action_scale.cpu().numpy()[0] * self.expl_noise, \n",
+    "                                            size=self.n_actions)\n",
+    "            # * 在采样动作时也加入噪音\n",
+    "            action = (action + action_noise).clip(self.action_space.low, self.action_space.high)\n",
     "            return action\n",
     "\n",
     "    @torch.no_grad()\n",
@@ -219,7 +219,7 @@
     "        # update critic\n",
     "        noise = (torch.randn_like(\n",
     "            action) * self.policy_noise).clamp(-self.noise_clip, self.noise_clip)  # 构造加入目标动作的噪声\n",
-    "        # 计算加入了噪声的目标动作\n",
+    "        # ! 技巧3: 平滑动作计算, 加入了噪声的目标动作\n",
     "        next_action = (self.actor_target(next_state) + \n",
     "                       noise).clamp(-self.action_scale + self.action_bias, self.action_scale+self.action_bias)\n",
     "        # 计算两个critic网络对t+1时刻的状态动作对的评分，并选取更小值来计算目标q值\n",
@@ -240,7 +240,7 @@
     "        critic_2_loss.backward()\n",
     "        self.critic_2_optimizer.step()\n",
     "        if self.sample_count % self.policy_freq == 0:\n",
-    "            # 延迟策略更新，actor的更新频率低于critic\n",
+    "            # ! 技巧2: 延迟策略更新，actor的更新频率低于critic\n",
     "            actor_loss = -self.critic_1(state, self.actor(state)).mean()\n",
     "            self.actor_optimizer.zero_grad()\n",
     "            actor_loss.backward()\n",
