修改代码，实现TD3

--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -211,7 +211,7 @@
     "            # 重要性, 本来是概率直接相除, 但是取e为底, 自然对数概率相减的幂, 结果是一样的\n",
     "            ratio = torch.exp(log_probs - old_log_probs)  # 重要性采样系数\n",
     "            surr1 = ratio * advantage # 重要性采样\n",
-    "            surr2 = torch.clamp(ratio, 1 - self.eps, 1 + self.eps) * advantage # 截断的重要性采样\n",
+    "            surr2 = torch.clip(ratio, 1 - self.eps, 1 + self.eps) * advantage # 截断的重要性采样\n",
     "            # PPO损失函数，取上面两者的最小值，加负号，取均值就是损失\n",
     "            actor_loss = torch.mean(-torch.min(surr1, surr2)) \n",
     "            # 评论员更新目标当作标签常数，加.detach()\n",
