--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TD3:\n",
     "    ''' DDPG算法 '''\n",
     "\n",
-    "    def __init__(self, state_dim, hidden_dim, action_dim, action_space, sigma, actor_lr, critic_lr, tau, gamma, policy_freq, device):\n",
+    "    def __init__(self, state_dim, hidden_dim, action_dim, action_space, sigma, policy_noise, noise_clip, actor_lr, critic_lr, tau, gamma, policy_freq, device):\n",
     "\n",
     "        # * 其他参数\n",
     "        self.action_space = action_space\n",
@@ -95,6 +95,9 @@
     "        self.sample_count = 0  # 用于计数更新次数, 确定演员更新时间\n",
     "\n",
     "        self.sigma = sigma  # 高斯噪声的标准差, 均值直接设为0\n",
+    "        self.policy_noise = policy_noise\n",
+    "        self.noise_clip = noise_clip\n",
+    "        \n",
     "        self.tau = tau  # 目标网络软更新参数\n",
     "        self.gamma = gamma  # target学习率\n",
     "        self.policy_freq = policy_freq  # 目标网络更新频率\n",
@@ -103,8 +106,7 @@
     "        self.action_scale = torch.tensor((self.action_space.high - self.action_space.low) / 2,\n",
     "                                         device=self.device, dtype=torch.float32).unsqueeze(dim=0)\n",
     "        # * 技巧1: 给了两个critic Q函数, 给出较小Q值的会纳入Q_target计算\n",
-    "        self.actor = PolicyNet(state_dim, hidden_dim,\n",
-    "                               action_dim, self.action_space.high[0]).to(device)\n",
+    "        self.actor = PolicyNet(state_dim, hidden_dim, action_dim, self.action_space.high[0]).to(device)\n",
     "        self.critic_1 = QValueNet(state_dim, hidden_dim, action_dim).to(device)\n",
     "        self.critic_2 = QValueNet(state_dim, hidden_dim, action_dim).to(device)\n",
     "\n",
@@ -130,8 +132,7 @@
     "\n",
     "    def take_action(self, state):\n",
     "        self.sample_count += 1\n",
-    "        state = torch.tensor(\n",
-    "            np.array(state), dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
     "        action = self.actor(state).item()\n",
     "        # 给动作添加噪声, 增加探索, 加上裁剪\n",
     "        action = action + self.sigma * np.random.randn(self.action_dim)\n",
@@ -141,9 +142,8 @@
     "\n",
     "    @torch.no_grad()\n",
     "    def predict_action(self, state):\n",
-    "        state = torch.tensor(\n",
-    "            np.array(state), device=self.device, dtype=torch.float32).item()\n",
-    "        action = self.actor(state)\n",
+    "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
+    "        action = self.actor(state).item()\n",
     "        return action\n",
     "\n",
     "    def soft_update(self, net, target_net):\n",
@@ -174,10 +174,9 @@
     "\n",
     "        # 评论员还是时序差分更新, 但这次评论员鼠鼠变成Q网络了, 需要输入状态和动作, 动作由演员选择\n",
     "        # * 技巧3: 平滑动作计算, 加入了噪声的目标动作\n",
-    "        noise = (torch.randn_like(\n",
-    "            actions) * self.policy_noise).clamp(-self.noise_clip, self.noise_clip)  # 构造加入目标动作的噪声\n",
-    "        next_action = (self.actor_target(next_states) +\n",
-    "                       noise).clamp(-self.action_scale, self.action_scale)\n",
+    "        noise = (torch.randn_like(actions) * self.policy_noise)  # 构造加入目标动作的噪声, rand_like保持shape\n",
+    "        noise = noise.clip(-self.noise_clip, self.noise_clip)  # 裁剪噪声避免过大\n",
+    "        next_action = (self.target_actor(next_states) + noise).clamp(-self.action_scale, self.action_scale)\n",
     "        target_q1, target_q2 = self.target_critic_1(next_states, next_action).detach(\n",
     "        ), self.target_critic_2(next_states, next_action).detach()\n",
     "        # 取两个网络较小值\n",
@@ -204,10 +203,24 @@
     "            self.actor_optimizer.zero_grad()\n",
     "            actor_loss.backward()\n",
     "            self.actor_optimizer.step()\n",
-    "            # 评论员目标网络软更新\n",
+    "            # 演员和评论员目标网络都延迟并且软更新\n",
     "            self.soft_update(self.actor, self.target_actor)\n",
     "            self.soft_update(self.critic_1, self.target_critic_1)\n",
     "            self.soft_update(self.critic_2, self.target_critic_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 关于技巧2\n",
+    "\n",
+    "目标网络需要延迟更新，在之前的案例中就已经这样操作了，这里策略/演员网络的更新也要延迟，策略网络更新太快会导致输出的动作很不稳定。并且目标网络的更新采用和DDPG一样的软更新。\n",
+    "\n",
+    "因此需要延迟更新的网络:\n",
+    "- 原演员网络 actor **直接梯度下降**\n",
+    "- 目标评论员网络 target_critic_1 和 target_critic_2 **软更新**\n",
+    "- 目标演员网络 target_actor **软更新**"
    ]
   },
   {
@@ -219,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +248,8 @@
     "minimal_size = 1000\n",
     "batch_size = 64\n",
     "sigma = 0.01  # 高斯噪声标准差\n",
+    "policy_noise = 0.2  # 策略网络的噪声\n",
+    "noise_clip = 0.5  # 裁剪噪音避免过大\n",
     "policy_freq = 3\n",
     "device = torch.device(\n",
     "    \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
@@ -254,8 +269,8 @@
     "action_dim = env.action_space.shape[0]\n",
     "action_space = env.action_space  # 动作最大值\n",
     "\n",
-    "agent = TD3(state_dim, hidden_dim, action_dim, action_space,\n",
-    "             sigma, actor_lr, critic_lr, tau, gamma, policy_freq, device)"
+    "agent = TD3(state_dim, hidden_dim, action_dim, action_space, sigma, policy_noise, \n",
+    "            noise_clip, actor_lr, critic_lr, tau, gamma, policy_freq, device)"
    ]
   },
   {
@@ -267,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,21 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<3/10>:   4%|▍         | 8/200 [00:06<02:34,  1.25it/s]                                        "
+     ]
+    }
+   ],
    "source": [
     "return_list = rl_utils.train_off_policy_agent(\n",
     "    env, agent, s_epoch, total_epochs, s_episode, total_episodes, replay_buffer, minimal_size, batch_size, return_list, PATH, 'TD3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent."
    ]
   },
   {
@@ -344,7 +358,7 @@
    "outputs": [],
    "source": [
     "s_epoch, s_episode, return_list = read_ckp(PATH)\n",
-    "rl_utils.picture_return(return_list, 'TD3', env_name, 9)"
+    "rl_utils.picture_return(return_list, 'TD3', env_name)"
    ]
   },
   {
@@ -360,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rl_utils.show_gym_policy(env_name, agent, 'AC')"
+    "test_list = rl_utils.show_gym_policy(env_name, agent, 'AC', epochs=100, if_return=True)"
    ]
   }
  ],
