--- a/强化学习笔记/other_files/TD3.ipynb
+++ b/强化学习笔记/other_files/TD3.ipynb
@@ -228,8 +228,7 @@
     "        target_q = torch.min(target_q1, target_q2)\n",
     "        target_q = reward + self.gamma * target_q * (1 - done)\n",
     "        # 计算两个critic网络对t时刻的状态动作对的评分\n",
-    "        current_q1, current_q2 = self.critic_1(\n",
-    "            state, action), self.critic_2(state, action)\n",
+    "        current_q1, current_q2 = self.critic_1(state, action), self.critic_2(state, action)\n",
     "        # 计算均方根损失\n",
     "        critic_1_loss = F.mse_loss(current_q1, target_q)\n",
     "        critic_2_loss = F.mse_loss(current_q2, target_q)\n",
