Changes to be committed: 更新笔记

--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -183,14 +183,14 @@
     "        dones = torch.tensor(np.array(transition_dict['dones']), dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        truncated = torch.tensor(np.array(transition_dict['truncated']), dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
-    "        if self.cod == 'd':\n",
+    "        if self.cod == 'd':  # 离散\n",
     "            td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
     "            td_delta = td_target - self.critic(states)\n",
     "            advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
     "            # 所谓的另一个演员就是原来的演员的初始状态\n",
     "            old_log_probs = torch.log(self.actor(states).gather(1, actions)).detach()\n",
-    "        elif self.cod == 'c':\n",
-    "            rewards = (rewards + 8.0) / 8.0  # 和TRPO一样,对奖励进行修改,方便训练\n",
+    "        elif self.cod == 'c':  # 连续\n",
+    "            rewards = (rewards + 8.0) / 8.0  # 和TRPO一样, 对奖励进行修改, 方便训练\n",
     "            td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
     "            td_delta = td_target - self.critic(states)\n",
     "            advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
