--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -174,9 +174,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ✅创新点\n",
+    "## ✅DDPG注意点\n",
     "\n",
-    "- DDPG首次引入软更新概念，即对于目标网络的更新，不再是延迟更新，而是每次只更新一点点; \n",
+    "- DDPG引入软更新概念，即对于目标网络的更新，不再是延迟更新，而是每次只更新一点点; \n",
     "\n",
     "- 并且把评论员网络变成Q网络，同时输入状态和动作，将它们拼接起来送入网络，之前DQN中没有这样做过，换成Q网络之后，输出一个价值，也就是这个动作状态的价值;\n",
     "\n",
