--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -213,15 +213,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ✅创新点\n",
+    "## ✅技巧\n",
     "\n",
     "twin delayed DDPG\n",
     "\n",
-    "1. 第一个创新点是，采用了两个评论员网络，谁给出的目标Q值小，就用谁的Q值;\n",
+    "1. 第一个技巧是，采用了两个评论员网络，谁给出的目标Q值小，就用谁的Q值;\n",
     "\n",
-    "2. 第二个创新点是，目标网络需要延迟更新，在DDPG之前的案例中就已经这样操作了; \n",
+    "2. 第二个技巧是，目标网络需要延迟更新，在DDPG之前的案例中就已经这样操作了; \n",
     "\n",
-    "3. 第三个创新点是，这里策略（演员）网络的更新也要延迟，策略网络更新太快会导致输出的动作很不稳定。并且更新方法采用和DDPG一样的软更新;\n",
+    "3. 第三个技巧是，这里策略（演员）网络的更新也要延迟，策略网络更新太快会导致输出的动作很不稳定。并且更新方法采用和DDPG一样的软更新;\n",
     "\n",
     "* 即时更新\n",
     "    - 原评论员网络 `critic_1` 和 `critic_2` **直接梯度下降**\n",
