--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -264,7 +264,6 @@
     "    \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "\n",
-    "\n",
     "# 环境相关\n",
     "env_name = 'Pendulum-v1'\n",
     "env = gym.make(env_name)\n",
@@ -278,11 +277,9 @@
     "action_dim = env.action_space.shape[0]\n",
     "action_space = env.action_space  # 动作最大值\n",
     "\n",
-    "agent = TD3(state_dim, hidden_dim, action_dim, action_space, sigma, policy_noise, \n",
-    "            noise_clip, actor_lr, critic_lr, tau, gamma, policy_freq, device)\n",
-    "\n",
     "# 其他\n",
-    "policy_name = agent.__class__.__name__  # 算法(类)名称"
+    "agent = TD3(state_dim, hidden_dim, action_dim, action_space, sigma, policy_noise, \n",
+    "            noise_clip, actor_lr, critic_lr, tau, gamma, policy_freq, device)"
    ]
   },
   {
