--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -16,12 +16,11 @@
     "import random\n",
     "import gymnasium as gym\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from torch.distributions import Normal\n",
-    "import matplotlib.pyplot as plt\n",
-    "import rl_utils"
+    "import rl_utils\n",
+    "import os"
    ]
   },
   {
@@ -106,63 +105,51 @@
     "        # 令目标Q网络的初始参数和Q网络一样\n",
     "        self.target_critic_1.load_state_dict(self.critic_1.state_dict())\n",
     "        self.target_critic_2.load_state_dict(self.critic_2.state_dict())\n",
-    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(),\n",
-    "                                                lr=actor_lr)\n",
-    "        self.critic_1_optimizer = torch.optim.Adam(self.critic_1.parameters(),\n",
-    "                                                   lr=critic_lr)\n",
-    "        self.critic_2_optimizer = torch.optim.Adam(self.critic_2.parameters(),\n",
-    "                                                   lr=critic_lr)\n",
+    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
+    "        self.critic_1_optimizer = torch.optim.Adam(self.critic_1.parameters(), lr=critic_lr)\n",
+    "        self.critic_2_optimizer = torch.optim.Adam(self.critic_2.parameters(), lr=critic_lr)\n",
     "        # 使用alpha的log值,可以使训练结果比较稳定\n",
     "        self.log_alpha = torch.tensor(np.log(0.01), dtype=torch.float)\n",
     "        self.log_alpha.requires_grad = True  # 可以对alpha求梯度\n",
-    "        self.log_alpha_optimizer = torch.optim.Adam([self.log_alpha],\n",
-    "                                                    lr=alpha_lr)\n",
+    "        self.log_alpha_optimizer = torch.optim.Adam([self.log_alpha], lr=alpha_lr)\n",
     "        self.target_entropy = target_entropy  # 目标熵的大小\n",
     "        self.gamma = gamma\n",
     "        self.tau = tau\n",
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor([state], dtype=torch.float).to(self.device)\n",
-    "        action = self.actor(state)[0]\n",
-    "        return [action.item()]\n",
+    "        state = torch.tensor(state, dtype=torch.float).to(self.device).unsqueeze(0)\n",
+    "        action = self.actor(state)[0].item()\n",
+    "        return action\n",
     "\n",
-    "    def calc_target(self, rewards, next_states, dones):  # 计算目标Q值\n",
+    "    def calc_target(self, rewards, next_states, dones, truncated):  # 计算目标Q值\n",
     "        next_actions, log_prob = self.actor(next_states)\n",
     "        entropy = -log_prob\n",
     "        q1_value = self.target_critic_1(next_states, next_actions)\n",
     "        q2_value = self.target_critic_2(next_states, next_actions)\n",
     "        next_value = torch.min(q1_value,\n",
     "                               q2_value) + self.log_alpha.exp() * entropy\n",
-    "        td_target = rewards + self.gamma * next_value * (1 - dones)\n",
+    "        td_target = rewards + self.gamma * next_value * (1 - dones | truncated)\n",
     "        return td_target\n",
     "\n",
     "    def soft_update(self, net, target_net):\n",
-    "        for param_target, param in zip(target_net.parameters(),\n",
-    "                                       net.parameters()):\n",
-    "            param_target.data.copy_(param_target.data * (1.0 - self.tau) +\n",
-    "                                    param.data * self.tau)\n",
+    "        for param_target, param in zip(target_net.parameters(), net.parameters()):\n",
+    "            param_target.data.copy_(param_target.data * (1.0 - self.tau) + param.data * self.tau)\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        states = torch.tensor(transition_dict['states'],\n",
-    "                              dtype=torch.float).to(self.device)\n",
-    "        actions = torch.tensor(transition_dict['actions'],\n",
-    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(transition_dict['rewards'],\n",
-    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(transition_dict['next_states'],\n",
-    "                                   dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(transition_dict['dones'],\n",
-    "                             dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        states = torch.tensor(transition_dict['states'], dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(transition_dict['actions'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        # 和之前章节一样,对倒立摆环境的奖励进行重塑以便训练\n",
     "        rewards = (rewards + 8.0) / 8.0\n",
     "\n",
     "        # 更新两个Q网络\n",
-    "        td_target = self.calc_target(rewards, next_states, dones)\n",
-    "        critic_1_loss = torch.mean(\n",
-    "            F.mse_loss(self.critic_1(states, actions), td_target.detach()))\n",
-    "        critic_2_loss = torch.mean(\n",
-    "            F.mse_loss(self.critic_2(states, actions), td_target.detach()))\n",
+    "        td_target = self.calc_target(rewards, next_states, dones, truncated)\n",
+    "        critic_1_loss = torch.mean(F.mse_loss(self.critic_1(states, actions), td_target.detach()))\n",
+    "        critic_2_loss = torch.mean(F.mse_loss(self.critic_2(states, actions), td_target.detach()))\n",
     "        self.critic_1_optimizer.zero_grad()\n",
     "        critic_1_loss.backward()\n",
     "        self.critic_1_optimizer.step()\n",
@@ -175,15 +162,13 @@
     "        entropy = -log_prob\n",
     "        q1_value = self.critic_1(states, new_actions)\n",
     "        q2_value = self.critic_2(states, new_actions)\n",
-    "        actor_loss = torch.mean(-self.log_alpha.exp() * entropy -\n",
-    "                                torch.min(q1_value, q2_value))\n",
+    "        actor_loss = torch.mean(-self.log_alpha.exp() * entropy - torch.min(q1_value, q2_value))\n",
     "        self.actor_optimizer.zero_grad()\n",
     "        actor_loss.backward()\n",
     "        self.actor_optimizer.step()\n",
     "\n",
     "        # 更新alpha值\n",
-    "        alpha_loss = torch.mean(\n",
-    "            (entropy - self.target_entropy).detach() * self.log_alpha.exp())\n",
+    "        alpha_loss = torch.mean((entropy - self.target_entropy).detach() * self.log_alpha.exp())\n",
     "        self.log_alpha_optimizer.zero_grad()\n",
     "        alpha_loss.backward()\n",
     "        self.log_alpha_optimizer.step()\n",
@@ -205,20 +190,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 环境相关\n",
     "env_name = 'Pendulum-v1'\n",
     "env = gym.make(env_name)\n",
-    "state_dim = env.observation_space.shape[0]\n",
-    "action_dim = env.action_space.shape[0]\n",
-    "action_bound = env.action_space.high[0]  # 动作最大值\n",
     "random.seed(0)\n",
     "np.random.seed(0)\n",
     "torch.manual_seed(0)\n",
     "\n",
+    "# SAC算法相关\n",
+    "PATH = 'checkpoints/SAC_PDv1.pt'\n",
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
     "alpha_lr = 3e-4\n",
-    "num_episodes = 100\n",
-    "hidden_dim = 128\n",
+    "total_epochs = 10\n",
+    "total_episodes = 100\n",
     "gamma = 0.99\n",
     "tau = 0.005  # 软更新参数\n",
     "buffer_size = 100000\n",
@@ -227,11 +212,64 @@
     "target_entropy = -env.action_space.shape[0]\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "print(device)\n",
-    "\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
+    "\n",
+    "# 神经网络相关\n",
+    "state_dim = env.observation_space.shape[0]\n",
+    "action_dim = env.action_space.shape[0]\n",
+    "action_bound = env.action_space.high[0]  # 动作最大值\n",
+    "hidden_dim = 128\n",
+    "\n",
+    "# 其他\n",
     "agent = SACContinuous(state_dim, hidden_dim, action_dim, action_bound,\n",
     "                      actor_lr, critic_lr, alpha_lr, target_entropy, tau,\n",
     "                      gamma, device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 检查点函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_ckp(ckp_path):\n",
+    "    if os.path.exists(ckp_path):\n",
+    "        checkpoint = torch.load(ckp_path)\n",
+    "        s_epoch = checkpoint['epoch']\n",
+    "        s_episode = checkpoint['episode']\n",
+    "        agent.actor.load_state_dict(checkpoint['actor_best_weight'])\n",
+    "        agent.critic_1.load_state_dict(checkpoint['critic_1_best_weight'])\n",
+    "        agent.critic_2.load_state_dict(checkpoint['critic_2_best_weight'])\n",
+    "        return_list = checkpoint['return_list']\n",
+    "        return s_epoch, s_episode, return_list\n",
+    "    else:\n",
+    "        s_epoch = 0\n",
+    "        s_episode = 0\n",
+    "        return_list = []\n",
+    "        return s_epoch, s_episode, return_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取检查点"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_epoch, s_episode, return_list = read_ckp(PATH)"
    ]
   },
   {
@@ -247,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "return_list = rl_utils.train_off_policy_agent(env, agent, num_episodes,\n",
+    "return_list = rl_utils.train_off_policy_agent(env, agent, total_episodes,\n",
     "                                              replay_buffer, minimal_size,\n",
     "                                              batch_size)"
    ]
